HTML/CSSdesign Chap.3 end
new file 1, fix file 2;

--- a/portfolio/01.html
+++ b/portfolio/01.html
@@ -4,6 +4,7 @@
 <head>
     <title>ページのタイトル</title>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/normalize.css">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/style.css">
 </head>
 
