--- a/portfolio/01.html
+++ b/portfolio/01.html
@@ -14,7 +14,17 @@
         <header id="pageHead">
             <h1 id="siteTitle">komorikomasha</h1>
             <p id="catchcopy">1人じゃできないことも、力をあわせればできる。やってみたいをカタチにする。3人の楽しいものづくり。</p>
+            <nav class="globalNavi">
+                <ul>
+                    <li><a href="../index.html">ホーム</a></li>
+                    <li><a href="../about/index.html">わたしたちについて</a></li>
+                    <li class="current"><a href="index.html">つくったもの</a></li>
+                    <li><a href="../contact/index.html">おといあわせ</a></li>
+                </ul>
+            </nav>
         </header>
+
+        <p class="topicPath"><a href="../index.html">ホーム</a> &gt; <a href="index.html">つくったもの</a> &gt; Cafe Dubut</p>
 
         <div id="pageBody">
             <div id="pageBodyMain">
@@ -24,7 +34,7 @@
                         <figure>
                             <img src="images/sample_01_01.jpg" alt="" width="720" height="390">
                         </figure>
-                        <p>baser CMS カフェサイト用テーマ<br> baser CMS テーマコンテスト2012 飲食店系テーマ賞受賞（受賞結果はこちら）</p>
+                        <p>baser CMS カフェサイト用テーマ<br> baser CMS テーマコンテスト2012 飲食店系テーマ賞受賞（<a href="http://contest.basercms.net/">受賞結果はこちら</a>）</p>
                     </header>
 
                     <section class="articleDetailBody">
@@ -82,10 +92,10 @@
                         <section>
                             <h2 class="heading-typeC">関連リンク</h2>
                             <ul>
-                                <li>Cafe Debut のダウンロードページ</li>
-                                <li>Cafe Debut のデモページ</li>
-                                <li>baser CMS 公式サイト</li>
-                                <li>Instagram 公式サイト</li>
+                                <li><a href="http://basercms.net/themes/archives/14">Cafe Debut のダウンロードページ</a></li>
+                                <li><a href="http://cafedebut.cat-speak.net/">Cafe Debut のデモページ</a></li>
+                                <li><a href="http://basercms.net/">baser CMS 公式サイト</a></li>
+                                <li><a href="http://instagram.com/">Instagram 公式サイト</a></li>
                             </ul>
                         </section>
 
@@ -94,8 +104,8 @@
                             <h2 class="heading-typeC">kitchen nest</h2>
                             <p>北海道札幌市中央区南3条西8丁目 太陽ビル2階</p>
                             <ul>
-                                <li>http://www.nest-kitchen.jp</li>
-                                <li>Facebookページ</li>
+                                <li><a href="http://www.nest-kitchen.jp">http://www.nest-kitchen.jp</a></li>
+                                <li><a href="http://www.facebook.com">Facebookページ</a></li>
                             </ul>
                             <p>Cafe Debut テーマのイメージ撮影にご協力いただきました。とっても素敵なお店です。</p>
                         </aside>
@@ -105,6 +115,13 @@
             </div>
             <!-- id="pageBodyMain"-->
             <div id="pageBodySub">
+                <nav class="localNavi">
+                    <ul>
+                        <li><a href="03.html">バッタになりたい魔法使い</a></li>
+                        <li><a href="02.html">WordPressデザインワークブック</a></li>
+                        <li><a href="01.html">Cafe Debut</a></li>
+                    </ul>
+                </nav>
                 <section class="newsList">
                     <h2>おしらせ</h2>
                     <ul>
@@ -118,6 +135,8 @@
             <!-- id="pageBodySub" -->
         </div>
         <!-- id="pageBody" -->
+
+        <p class="pagetop"><a href="#page">ページの先頭へ戻る</a></p>
 
         <footer id="pageFoot">
             <p id="copyright">
