--- a/portfolio/02.html
+++ b/portfolio/02.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 
 <head>
-    <title>ページのタイトル</title>
+    <title>WordPressデザインワークブック｜つくったもの｜komorikomasha</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/normalize.css">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/style.css">
