--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 
 <head>
-    <title>ページのタイトル</title>
+    <title>わたしたちについて｜komorikomasha</title>
     <meta charset="UTF-8">
+    <meta name="description" content="komorikomashaのさくひんづくりのコンセプトを紹介するページです。">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/normalize.css">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/style.css">
 </head>
@@ -28,7 +29,16 @@
 
         <div id="pageBody">
             <div id="pageBodyMain">
-                <h1 class="pageTitle">わたしたちについて</h1>
+                <article class="articleDetail">
+                    <h1 class="pageTitle">わたしたちについて</h1>
+                    <div class="imageCenter">
+                        <img src="images/img_01.png" alt="We are komorikomasha" width="202" height="253">
+                    </div>
+                    <p>あんなこといいな。できたらいいな。</p>
+                    <p>みんなで力を合わせれば、今までできなかったこと、きっとできるようになる。</p>
+                    <p>ちょっと大変な時でも、仲間と一緒ならがんばれる。だから、いつでも楽しいこと考えよう、やってみよう、つくってみよう。</p>
+                    <p>このサイトでは、コモモ・モリコ・ひろましゃのメンバーが勢いでつくったものを紹介しています。</p>
+                </article>
             </div>
             <!-- id="pageBodyMain"-->
             <div id="pageBodySub">
