--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
 
 <head>
-    <title>ページのタイトル</title>
+    <title>つくったもの｜komorikomasha</title>
     <meta charset="UTF-8">
+    <meta name="description" content="komorikomashaが制作した作品を紹介するポートフォリオの一覧ページです。">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/normalize.css">
     <link rel="stylesheet" href="D:/Users/NJC4659/workspace/www/common/css/style.css">
 </head>
@@ -28,7 +29,42 @@
 
         <div id="pageBody">
             <div id="pageBodyMain">
-                <h1 class="pageTitle">つくったもの</h1>
+                <section>
+                    <h1 class="pageTitle">つくったもの</h1>
+                    <article class="articleList">
+                        <a href="03.html">
+                            <div class="articleListText">
+                                <h1>バッタになりたい魔法使い</h1>
+                                <p>コモモ・ひろましゃ制作のWeb仕掛け絵本<br> 合い言葉は、バッタになっちゃえ！</p>
+                            </div>
+                            <div class="articleListImage">
+                                <img src="images/index_03.jpg" width="300" height="163" alt="">
+                            </div>
+                        </a>
+                    </article>
+                    <article class="articleList">
+                        <a href="02.html">
+                            <div class="articleListText">
+                                <h1>WordPressデザインワークブック</h1>
+                                <p>コモモとひろましゃ二人の共著によるWordPressで本格的なウェブサイトを制作したい方向けの書籍</p>
+                            </div>
+                            <div class="articleListImage">
+                                <img src="images/index_02.jpg" width="300" height="163" alt="">
+                            </div>
+                        </a>
+                    </article>
+                    <article class="articleList">
+                        <a href="01.html">
+                            <div class="articleListText">
+                                <h1>Cafe Debut</h1>
+                                <p>baserCMSのカフェサイト用汎用テーマ<br> テーマコンテスト2012飲食店系テーマ賞受賞</p>
+                            </div>
+                            <div class="articleListImage">
+                                <img src="images/index_01.jpg" width="300" height="163" alt="">
+                            </div>
+                        </a>
+                    </article>
+                </section>
             </div>
             <!-- id="pageBodyMain"-->
             <div id="pageBodySub">
