--- a/contact/index.html
+++ b/contact/index.html
@@ -31,7 +31,7 @@
                 <article class="articleDetail">
                     <h1 class="pageTitle">おといあわせ</h1>
                     <p>このサイトについてのご意見・ご質問は、おといあわせフォームより受け付けています。</p>
-                    <p class="btn"><a href="">おといあわせフォーム</a></p>
+                    <p class="btn"><a href="https://docs.google.com/a/njc.co.jp/forms/d/1RLkG1TLZUR6lyaAExNBl80h_cFwTTSm3l0UvCiY4aq0/edit?usp=sharing" target="_blank">おといあわせフォーム</a></p>
 
                     <p>メンバー各自へのおといあわせは、それぞれのブログなどからお願いいたします。</p>
                     <section>
