--- a/portfolio/01.html
+++ b/portfolio/01.html
@@ -100,14 +100,19 @@
                         </section>
 
                         <aside class="creditUnit">
-                            <p>撮影協力</p>
-                            <h2 class="heading-typeC">kitchen nest</h2>
-                            <p>北海道札幌市中央区南3条西8丁目 太陽ビル2階</p>
-                            <ul>
-                                <li><a href="http://www.nest-kitchen.jp">http://www.nest-kitchen.jp</a></li>
-                                <li><a href="http://www.facebook.com">Facebookページ</a></li>
-                            </ul>
-                            <p>Cafe Debut テーマのイメージ撮影にご協力いただきました。とっても素敵なお店です。</p>
+                            <div class="creditUnitText">
+                                <p>撮影協力</p>
+                                <h2 class="heading-typeC">kitchen nest</h2>
+                                <p>北海道札幌市中央区南3条西8丁目 太陽ビル2階</p>
+                                <ul>
+                                    <li><a href="http://www.nest-kitchen.jp">http://www.nest-kitchen.jp</a></li>
+                                    <li><a href="http://www.facebook.com">Facebookページ</a></li>
+                                </ul>
+                                <p>Cafe Debut テーマのイメージ撮影にご協力いただきました。とっても素敵なお店です。</p>
+                            </div>
+                            <div class="creditUnitMap">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2915.3022442435977!2d141.34425481484132!3d43.056110398853164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x280aa3b036238334!2snest!5e0!3m2!1sja!2sjp!4v1493168350200" width="300" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            </div>
                         </aside>
                     </footer>
 
