--- a/portfolio/01.html
+++ b/portfolio/01.html
@@ -89,6 +89,20 @@
                     </section>
 
                     <footer class="articleDetailFoot">
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-lang="ja" data-size="large">ツイート</a>
+                        <script>
+                            ! function(d, s, id) {
+                                var js, fjs = d.getElementsByTagName(s)[0],
+                                    p = /^http:/.test(d.location) ? 'http' : 'https';
+                                if (!d.getElementById(id)) {
+                                    js = d.createElement(s);
+                                    js.id = id;
+                                    js.src = p + '://platform.twitter.com/widgets.js';
+                                    fjs.parentNode.insertBefore(js, fjs);
+                                }
+                            }(document, 'script', 'twitter-wjs');
+
+                        </script>
                         <section>
                             <h2 class="heading-typeC">関連リンク</h2>
                             <ul>
